--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-build/classes/*
+.settings/
+target/
+.classpath
+.project
+!.mvn/wrapper/maven-wrapper.jar
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
